@@ -15,7 +15,7 @@ module RtmHistFile
                              ctitle, version, hostname, username, conventions, source
   use RtmFileUtils  , only : get_filename, getfil
   use RtmTimeManager, only : get_nstep, get_curr_date, get_curr_time, get_ref_date, &
-                             get_prev_time, get_prev_date, is_last_step
+                             get_prev_time, get_prev_date, is_last_step, get_step_size
   use RtmSpmd       , only : masterproc
   use RtmIO
   use RtmDateTime
@@ -53,6 +53,10 @@ module RtmHistFile
   character(len=max_namlen+2), public :: rtmhist_fincl1(max_flds) = ' '       
   character(len=max_namlen+2), public :: rtmhist_fincl2(max_flds) = ' '
   character(len=max_namlen+2), public :: rtmhist_fincl3(max_flds) = ' '
+  !
+  ! time_period_freq variable
+  !
+  character(len=max_namlen+2), public :: time_period_freq = ' '
 
   ! list of fields to remove
   character(len=max_namlen+2), public :: rtmhist_fexcl1(max_flds) = ' ' 
@@ -615,6 +619,8 @@ contains
     ! Define contents of history file t. Issue the required netcdf
     ! wrapper calls to define the history file contents.
     !
+    ! !USES:
+    use RtmVar   , only: isecspday
 
     ! !ARGUMENTS:
     implicit none
@@ -633,6 +639,8 @@ contains
     integer :: ncprec              ! output netCDF write precision
     integer :: ret                 ! netCDF error status
     integer :: numrtm              ! total number of rtm cells on all procs
+    integer :: dtime               ! timestep size
+    integer :: sec_hist_nhtfrq     ! rtmhist_nhtfrq converted to seconds
     logical :: lhistrest           ! local history restart flag
     type(file_desc_t) :: lnfid     ! local file id
     character(len=  8) :: curdate  ! current date
@@ -699,6 +707,31 @@ contains
     str = get_filename(frivinp_rtm)
     call ncd_putatt(lnfid, ncd_global, 'RTM_input_dataset', trim(str))
 
+    !     
+    ! add global attribute time_period_freq
+    !     
+    if (rtmhist_nhtfrq(t) < 0) then !hour need to convert to seconds
+        sec_hist_nhtfrq = abs(rtmhist_nhtfrq(t))*3600
+    else
+        sec_hist_nhtfrq = rtmhist_nhtfrq(t)
+    end if
+
+    dtime = get_step_size()
+    if (sec_hist_nhtfrq == 0) then !month
+       time_period_freq = 'month_1'
+    else if (mod(sec_hist_nhtfrq*dtime,isecspday) == 0) then ! day
+       write(time_period_freq,999) 'day_',sec_hist_nhtfrq*dtime/isecspday
+    else if (mod(sec_hist_nhtfrq*dtime,3600) == 0) then ! hour
+       write(time_period_freq,999) 'hour_',(sec_hist_nhtfrq*dtime)/3600
+    else if (mod(sec_hist_nhtfrq*dtime,60) == 0) then ! minute
+       write(time_period_freq,999) 'minute_',(sec_hist_nhtfrq*dtime)/60
+    else                     ! second
+      write(time_period_freq,999) 'second_',sec_hist_nhtfrq*dtime
+    end if
+999 format(a,i0)
+
+    call ncd_putatt(lnfid, ncd_global, 'time_period_freq', trim(time_period_freq))
+
     ! Define dimensions.
     ! Time is an unlimited dimension. Character string is treated as an array of characters.
 
@@ -751,6 +784,7 @@ contains
     integer :: mdcur                      ! current day
     integer :: mscur                      ! seconds of current day
     integer :: mcdate                     ! current date
+    integer :: dtime                      ! timestep size
     integer :: yr,mon,day,nbsec           ! year,month,day,seconds components of a date
     integer :: hours,minutes,secs         ! hours,minutes,seconds of hh:mm:ss
     character(len= 10) :: basedate        ! base date (yyyymmdd)
